--- a/planningandacquiring/templates/planningandacquiring/budget_list.html
+++ b/planningandacquiring/templates/planningandacquiring/budget_list.html
@@ -27,7 +27,7 @@
         	<thead>
           	<tr>
               <th>Date Created</th>
-              <th>Budget for Year</th>
+              <th>Year to be Budget</th>
 
           	</tr>
     		</thead>
