--- a/profiles/templates/profiles/sidebar_pa.html
+++ b/profiles/templates/profiles/sidebar_pa.html
@@ -34,7 +34,13 @@
                                         <i class="list alternate icon"></i>
                                 </a>
 
-                                 <a href="{% url 'planningandacquiring:budget_list'%}" class="item">Budgeting
+                                 <a href="{% url 'planningandacquiring:budgeting'%}" class="item">Create Budget Estimate
+                                        <i class="money bill alternate outline icon"></i>
+                                </a>
+                                 <a href="{% url 'planningandacquiring:choose_date'%}" class="item">Budgeting Detail
+                                        <i class="money bill alternate outline icon"></i>
+                                </a>
+                                <a href="{% url 'planningandacquiring:budget_report'%}" class="item">Budgeting Report
                                         <i class="money bill alternate outline icon"></i>
                                 </a>
 
