--- a/training/templates/training/classify_k9_list.html
+++ b/training/templates/training/classify_k9_list.html
@@ -162,7 +162,7 @@
             <td >{{data_trained.sex}}</td>
             <td>{{data_trained.age}}</td>
             <td style="text-align:center;">
-                <a href="{% url 'training:serial_number_form' data_trained.id %}" class = "tiny ui blue basic button">Assign MC</a>
+                <a href="{% url 'training:serial_number_form' data_trained.id %}" class = "tiny ui blue basic button">Assign Purpose</a>
             </td>
         </tr>
         {% endfor %}
