--- a/training/templates/training/genealogy.html
+++ b/training/templates/training/genealogy.html
@@ -14,7 +14,7 @@
         <th>Skill (Mother)</th>
         <th>Father</th>
         <th>Skill {Father)</th>
-        <th>Generation</th>
+        <th>Generation (Inverted)</th>
     </tr>
     </thead>
     <tbody>
