--- a/unitmanagement/templates/unitmanagement/k9_sick_details.html
+++ b/unitmanagement/templates/unitmanagement/k9_sick_details.html
@@ -21,7 +21,7 @@
             <tr>
                 <th>Problem</th>
                 <td class="nine wide">{{data.description}}</td>
-                <td>Reported by:</td>
+                <th>Reported by:</th>
                 <td>{{data.reported_by}}</td>
             </tr>
         </thead>
