--- a/unitmanagement/templates/unitmanagement/k9_unpartnered_list.html
+++ b/unitmanagement/templates/unitmanagement/k9_unpartnered_list.html
@@ -18,7 +18,7 @@
         <thead>
             <tr>
                 <th>K9</th>
-                <th>Microchip</th>
+                <th>Serial Number</th>
                 <th>Breed</th>
                 <th>Age</th>
                 <th>Capability</th>
@@ -30,7 +30,7 @@
                     <td>
                         <a href="{% url 'unitmanagement:choose_handler_list' data.id %}">{{data.name}}</a>
                     </td>
-                    <td>{{data.microchip}}</td>
+                    <th>{{data.serial_number}}</th>
                     <td>{{data.breed}}</td>
                     <td>{{data.age}}</td>
                     <td>{{data.capability}}</td>
@@ -45,7 +45,7 @@
         <thead>
             <tr>
                 <th>K9</th>
-                <th>Microchip</th>
+                <th>Serial Number</th>
                 <th>Breed</th>
                 <th>Age</th>
                 <th>Capability</th>
@@ -57,7 +57,7 @@
                     <td>
                         <a href="{% url 'unitmanagement:choose_handler_list' data.id %}">{{data.name}}</a>
                     </td>
-                    <td>{{data.microchip}}</td>
+                    <th>{{data.serial_number}}</th>
                     <td>{{data.breed}}</td>
                     <td>{{data.age}}</td>
                     <td>{{data.capability}}</td>
