--- a/profiles/templates/profiles/sidebar_pa.html
+++ b/profiles/templates/profiles/sidebar_pa.html
@@ -9,6 +9,9 @@
                             <div class="ui tiny pointing vertical menu" style="width:230px;">
                                 <a class="item"> <b>Planning and Acquiring Menu</b></a>
                                 {% if request.session.session_user_position == "Veterinarian" %}
+                                <a href="{% url 'planningandacquiring:add_breed_form'%}" class="item">Add
+                                        <i class="plus circle icon"></i>
+                                </a>
                                 <a href="{% url 'planningandacquiring:add_K9_parents_form'%}" class="item">Breeding Form
                                         <i class="plus circle icon"></i>
                                 </a>
@@ -27,6 +30,9 @@
                                 {% endif %}
 
                                 {% if request.session.session_user_position == "Administrator" %}
+                                <a href="{% url 'planningandacquiring:add_breed_form'%}" class="item">Add Breed
+                                        <i class="plus circle icon"></i>
+                                </a>
                                 <a href="{% url 'planningandacquiring:add_donated_K9_form'%}" class="item">Add K9 Data Form
                                         <i class="plus circle icon"></i>
                                 </a>
