--- a/deployment/templates/deployment/add_location.html
+++ b/deployment/templates/deployment/add_location.html
@@ -28,6 +28,13 @@
                                      {{form.city}}
                              </div>
                            </div>
+                           <div class="two fields">
+                                <div class="field">
+                                    <label>Sector</label>
+                                        {{form.sector_type}}
+                                </div>
+                              
+                              </div>
                             <div class="field">
                                 <label>Place</label>
                                     {{form.place}}
