--- a/training/templates/training/training_update_ndd.html
+++ b/training/templates/training/training_update_ndd.html
@@ -147,6 +147,21 @@
 
 
 
+
+<div class="ui tab segment" data-tab="second">
+    <table id="tabledata2" class="ui very basic four column table">
+        <thead>
+            <tr>
+                <th>Status: {{data.training_status}}</th>
+                <th>Type: {{data.status}}</th>
+                <th>Capability: {{data.capability}}</th>
+                <th>Level: {{data.training_level}}</th>
+            </tr>
+        </thead>
+    </table>
+
+
+
 <script type="text/javascript">
 
  $(document).ready(function() {
