--- a/planningandacquiring/templates/planningandacquiring/K9_detail.html
+++ b/planningandacquiring/templates/planningandacquiring/K9_detail.html
@@ -72,7 +72,7 @@
                 <td>{{k9.status}}</td>
                 </tr>
             <tr>
-              <th>Assigned</th>
+              <th>Type</th>
                 <td id='status'>{{k9.training_status}}</td>
                 </tr>
             <tr>
@@ -83,14 +83,6 @@
               <th>Assignment</th>
                 <td>{{k9.assignment}}</td>
                 </tr>
-            <tr>
-              <th>Year Retired</th>
-                <td>{{k9.year_retired}}</td>
-                </tr>
-            <tr>
-              <th>Microchip</th>
-                <td>{{k9.microchip}}</td>
-            </tr>
              {% if parent_exist %}
             <tr>
                 <th>Mother</th>
@@ -101,14 +93,7 @@
                 <td>{{parent.father}}</td>
             </tr>
             {% else %}
-            <tr>
-                <th>Mother</th>
-                <td>Unknown</td>
-            </tr>
-            <tr>
-                <th>Father</th>
-                <td>Unknown</td>
-            </tr>
+          
             {% endif %}
 
     		</thead>
