--- a/planningandacquiring/templates/planningandacquiring/K9_list.html
+++ b/planningandacquiring/templates/planningandacquiring/K9_list.html
@@ -8,18 +8,16 @@
     {% endif %}
 </div>
 <div class="ui segment">
-	<table id="tabledata1" class="ui ten column celled table">
+	<table id="tabledata1" class="ui eight column celled table">
         <thead>
         <tr>
             <th>Name</th>
             <th>Serial Number</th>
             <th>Breed</th>
             <th>Sex</th>
-            <th>Color</th>
-            <th>Birthdate</th>
             <th>Age</th>
             <th>Skill</th>
-            <th>Assignment</th>
+            <th>Source</th>
             <th>Status</th>
         </tr>
         </thead>
@@ -30,12 +28,10 @@
                     <td>{{ K9.serial_number }}</td>
                     <td>{{ K9.breed }}</td>
                     <td>{{ K9.sex }}</td>
-                    <td>{{ K9.color}}</td>
-                    <td>{{ K9.birth_date}}</td>
                     <td>{{ K9.age}}</td>
                     <td>{{ K9.capability}}</td>
-                    <td>{{ K9.assignment}}</td>
-                    <td>{{ K9.training_status}}</td>
+                    <td>{{ K9.source}}</td>
+                    <td>{{ K9.status}}</td>
                 </tr>
             {% endfor %}
         </tbody>
