--- a/planningandacquiring/templates/planningandacquiring/breeding_confirmed.html
+++ b/planningandacquiring/templates/planningandacquiring/breeding_confirmed.html
@@ -4,7 +4,7 @@
   <i class="green check icon"></i>
   <div class="content">
     <div class="header">
-      You have succesfully added K9 to database!
+      You have succesfully added K9s to the database!
     </div>
     <p>Head over to navigation to continue with operations.</p>
   </div>
