--- a/planningandacquiring/templates/planningandacquiring/confirm_breeding.html
+++ b/planningandacquiring/templates/planningandacquiring/confirm_breeding.html
@@ -31,36 +31,46 @@
   </div>
 </div>
 
-<div class="ui horizontal very basic segments">
-  <div class="ui segment">
-    <center>
-      <img src="{{mother.image.url}}" alt="" width="280">
-    </center>
-  </div>
-  <div class="ui segment">
-    <center>
-      <img src="{{father.image.url}}" alt="" width="280">
-    </center>
-  </div>
- 
-</div>
-
 <div class="ui placeholder segment">
   <div class="ui two column stackable center aligned grid">
     <div class="ui vertical divider">Parents</div>
     <div class="middle aligned row">
 
-      <div class="column">
+      <div class=" column">
         <div class="ui icon header">
-          <i class="venus icon"></i>
-
+            <center>
+              <img src="{{mother.image.url}}" alt="" width="200">
+            </center>
         </div>
         <div class="field">
 
-         <h2 class="ui dividing header">Mother</h2>
-		<table class="ui celled table">
-        	<thead>
-          	<tr>
+         <h2 class="ui dividing header"> <i class="venus icon"></i>Mother</h2>
+	
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="ui icon header">
+            <center>
+              <img src="{{father.image.url}}" alt="" width="200">
+            </center>
+        </div>
+
+      <div class = "field">
+
+       <h2 class="ui dividing header"><i class="mars icon"></i>Father</h2>
+		
+      </div>
+      </div>
+
+      </div>
+    </div>
+  </div>
+  <div class="ui horizontal segments">
+      <div class="ui stacked segment">
+        <table class="ui two column celled table">
+          <thead>
+            <tr>
                 <th>Name</th>
                 <td>{{mother.name}}</td>
                 </tr>
@@ -77,60 +87,25 @@
                 <td>{{mother.sex}}</td>
                 </tr>
             <tr>
-			  <th>Color</th>
+        <th>Color</th>
                 <td>{{mother.color}}</td>
-                </tr>
-            <tr>
-              <th>Birthdate</th>
-                <td>{{mother.birth_date}}</td>
                 </tr>
             <tr>
               <th>Age</th>
                 <td>{{mother.age}}</td>
                 </tr>
             <tr>
-              <th>Microchip</th>
-                <td>{{mother.microchip}}</td>
-            </tr>
-            <tr>
               <th>Source</th>
                 <td>{{mother.source}}</td>
                 </tr>
             <tr>
-            <tr>
-              <th>Assignment</th>
-                <td>{{mother.assignment}}</td>
-                </tr>
-            <tr>
-            <tr>
-              <th>Status</th>
-                <td>{{mother.status}}</td>
-                </tr>
-            <tr>
-            <tr>
-              <th>Training Status</th>
-                <td>{{mother.training_status}}</td>
-                </tr>
-            <tr>
-
-    		</thead>
+        </thead>
         </table>
-
-        </div>
       </div>
-
-      <div class="column">
-        <div class="ui icon header">
-          <i class="mars icon"></i>
-
-        </div>
-
-      <div class = "field">
-
-       <h2 class="ui dividing header">Father</h2>
-		<table class="ui celled table">
-        	<thead>
-          	<tr>
+      <div class="ui stacked segment">
+        <table class="ui celled table">
+          <thead>
+            <tr>
                 <th>Name</th>
                 <td>{{father.name}}</td>
                 </tr>
@@ -147,53 +122,24 @@
                 <td>{{father.sex}}</td>
                 </tr>
             <tr>
-			  <th>Color</th>
+        <th>Color</th>
                 <td>{{father.color}}</td>
-                </tr>
-            <tr>
-              <th>Birthdate</th>
-                <td>{{father.birth_date}}</td>
                 </tr>
             <tr>
               <th>Age</th>
                 <td>{{father.age}}</td>
                 </tr>
             <tr>
-              <th>Microchip</th>
-                <td>{{father.microchip}}</td>
-            </tr>
-            <tr>
               <th>Source</th>
                 <td>{{father.source}}</td>
                 </tr>
             <tr>
-            <tr>
-              <th>Assignment</th>
-                <td>{{father.assignment}}</td>
-                </tr>
-            <tr>
-            <tr>
-              <th>Status</th>
-                <td>{{father.status}}</td>
-                </tr>
-            <tr>
-            <tr>
-              <th>Training Status</th>
-                <td>{{father.training_status}}</td>
-                </tr>
-            <tr>
-
-    		</thead>
+        </thead>
         </table>
-
-      </div>
-      </div>
-
       </div>
     </div>
-  </div>
 <h2 class="ui center aligned dividing header">Offspring</h2>
-  <div class="ui segment">
+  <div class="ui placeholder segment">
     <center>
       <img src="{{offspring.image.url}}" alt="" width="280">
     </center>
